Temporarily fix more terminate_with_reason-related crashes https://bugs.webkit.org/show_bug.cgi?id=224559 <rdar://76639741>

Reviewed by Geoff Garen.

* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::terminateWithReason):



Canonical link: https://commits.webkit.org/236517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275964 268f45cc-cd09-0410-ab3c-d52691b4dbfc